Use FastUUID for `apns-id` handling.

--- a/pushy/pom.xml
+++ b/pushy/pom.xml
@@ -48,6 +48,10 @@
             <artifactId>netty-tcnative-boringssl-static</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.eatthepath</groupId>
+            <artifactId>fast-uuid</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
