--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
                 <version>2.0.7.Final</version>
             </dependency>
             <dependency>
+                <groupId>com.eatthepath</groupId>
+                <artifactId>fast-uuid</artifactId>
+                <version>0.1</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.8.0</version>
